nifi/pod.yml
apiVersion: apps/v1 
kind: Deployment
metadata:
  name: cafebot-data
spec:
  selector:
    matchLabels:
      app: cafebot-data
  replicas: 1
  template:
    metadata:
      labels:
        app: cafebot-data
    spec:
      containers:
        - name: cafebot-frontend
          image: busybox
          volumeMounts:
          - mountPath: "/opt/cafebot"
            name: cafebot-data
          command: [ "sleep", "1000000" ]
      volumes:
        - name: cafebot-data
          persistentVolumeClaim:
            claimName: cafebot-data
